<resources>
    <string name="app_name">Guessing Game</string>
    <string name="guess_button">Guess</string>
    <string name="play_button">Play again</string>
    <string name="guess_num">Guess a number between 1 and 10 </string>
    <string name="answer">The answer is </string>
    <string name="msg">You </string>
    <string name="errorMsg">Oops! You must enter a value between 1 and 10! </string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>

</resources>
