<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.missouristate.davis916.guessinggame.MainActivity">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="350dp"
        android:layout_height="235dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:ems="10"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="15dp"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:gravity="center"
        android:shadowColor="@android:color/white"
        android:text="@string/guess_num"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="7dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView0"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="253dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:stretchColumns="0,1,2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/one"
                android:onClick="showNum"/>

            <Button
                android:id="@+id/button2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/two"
                android:onClick="showNum"/>

            <Button
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/three"
                android:onClick="showNum"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/four"
                android:onClick="showNum"/>

            <Button
                android:id="@+id/button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/five"
                android:onClick="showNum"/>

            <Button
                android:id="@+id/button6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/six"
                android:onClick="showNum"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/seven"
                android:onClick="showNum"/>

            <Button
                android:id="@+id/button8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/eight"
                android:onClick="showNum"/>

            <Button
                android:id="@+id/button9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/nine"
                android:onClick="showNum"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/button10"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/ten"
                android:onClick="showNum"/>

            <Button
                android:id="@+id/guessbtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_span="2"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:elevation="5dp"
                android:text="@string/guess_button" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
